--- a/etc/sip.conf
+++ b/etc/sip.conf
@@ -38,13 +38,13 @@ checkmwi=10
 allowguest=yes
 defaultexpiry=120
 g726nonstandard=no
-fromdomain=azlaea.bakstaaj.com
-externip=72.217.67.221
+fromdomain=pbx.example.com
+externip=xxx.xxx.xxx.xxx
 externrefresh=120
-localnet=192.168.86.0/255.255.255.0
+localnet=192.168.1.0/255.255.255.0
 qualify=no
-domain=azalea.bakstaaj.com
-domain=192.168.86.39
+domain=pbx.example.com
+domain=xxx.xxx.xxx.xxx
 dndbusy=yes
 tcpenable=yes
 allowsubscribe=yes
@@ -58,7 +58,7 @@ pedantic=no
 
 [obi200]
 type=friend
-secret=aaJS1014
+secret=super-secret-password
 qualify=yes
 nat=no
 host=dynamic
@@ -72,7 +72,7 @@ transport=udp
 
 [alarm]
 type=friend
-secret=aaJS1014
+secret=super-secret-password
 qualify=yes
 nat=no
 host=dynamic
@@ -83,16 +83,6 @@ canreinvite=no
 allow=ulaw
 insecure=port,invite
 transport=udp
-
-;[amazon]
-;type=peer
-;host=35.169.114.93
-;defaultuser=amazon
-;secret=a3bktJS1697
-;context=incoming
-;disallow=all
-;allow=ulaw
-;transport=tls
 
 [localphone](!)
 deny=0.0.0.0/0.0.0.0
@@ -140,91 +130,91 @@ notifycid=no
 nat=force_rport,comedia
 
 [101](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [102](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [103](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [104](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [105](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [107](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [106](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp
 
 [108](localphone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=udp
 
 [201](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp,tls
 
 [202](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tls
 
 [203](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp,tls
 
 [204](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp,tls
 
 [205](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp,tls
 
 [207](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=udp
 
 [206](remotephone)
-secret=aaJS1014
+secret=super-secret-password
 context=hotdesk
 mailbox=200@default
 transport=tcp,tls
