--- a/etc/calendar.conf
+++ b/etc/calendar.conf
@@ -113,8 +113,8 @@
 [googlecal]
 type=caldav
 url=https://www.google.com/calendar/dav/hdrider465@gmail.com/events
-user=hdrider465@gmail.com
-secret=a3bktJS1227
+user=user@gmail.com
+secret=secret
 refresh=5
 timeframe=60
 ;channel=Motif/google3/16023127950@voice.google.com
@@ -126,8 +126,8 @@ autoreminder=5
 [google2cal]
 type=caldav
 url=https://www.google.com/calendar/dav/bakstaaj@gmail.com/events
-user=bakstaaj@gmail.com
-secret=aaJS1014
+user=user@gmail.com
+secret=secret
 refresh=5
 timeframe=60
 channel=SIP/202
