--- a/etc/calendar.conf
+++ b/etc/calendar.conf
@@ -112,7 +112,7 @@
 
 [googlecal]
 type=caldav
-url=https://www.google.com/calendar/dav/hdrider465@gmail.com/events
+url=https://www.google.com/calendar/dav/user@gmail.com/events
 user=user@gmail.com
 secret=secret
 refresh=5
@@ -125,7 +125,7 @@ autoreminder=5
 
 [google2cal]
 type=caldav
-url=https://www.google.com/calendar/dav/bakstaaj@gmail.com/events
+url=https://www.google.com/calendar/dav/user@gmail.com/events
 user=user@gmail.com
 secret=secret
 refresh=5
