--- a/ssmtp.conf
+++ b/ssmtp.conf
@@ -8,16 +8,16 @@
 # The place where the mail goes. The actual machine name is required no 
 # MX records are consulted. Commonly mailhosts are named mail.domain.com
 mailhub=smtp.gmail.com:587
-AuthUser=hdrider465@gmail.com
-AuthPass=a3bktJS1227
+AuthUser=user@gmail.com
+AuthPass=secret
 UseTLS=YES
 UseSTARTTLS=YES
 
 # Where will the mail seem to come from?
-#rewriteDomain=bakstaaj.com
+#rewriteDomain=example.com
 
 # The full hostname
-#hostname=asterisk.bakstaaj.com
+#hostname=asterisk.example.com
 
 # Are users allowed to set their own From: address?
 # YES - Allow the user to specify their own From: address
