--- a/etc/manager.conf
+++ b/etc/manager.conf
@@ -80,7 +80,7 @@ httptimeout = 60
 
 
 [asterisk]
-secret = aaJS1014
+secret = secret
 ;deny=0.0.0.0/0.0.0.0
 ;permit=209.16.236.73/255.255.255.0
 ;acl=named_acl_example               ; use a named ACL from acl.conf
