--- a/etc/res_config_mysql.conf
+++ b/etc/res_config_mysql.conf
@@ -33,9 +33,9 @@
 ; widen a table column width to meet the requirements specified.
 ;
 [general]
-dbhost = 192.168.86.39
+dbhost = 192.168.1.0
 dbname = asterisk
 dbuser = asterisk
-dbpass = aaJS1014
+dbpass = secret
 dbport = 3306
 dbcharset = latin1
