--- a/etc/res_odbc.conf
+++ b/etc/res_odbc.conf
@@ -19,7 +19,7 @@ ODBCINI    => /etc/odbc.ini
 enabled => yes
 dsn => asterisk-connector
 username => asterisk
-password => aaJS1014
+password => secret
 max_connections => 5
 pre-connect => yes
 
