--- a/odbc.ini
+++ b/odbc.ini
@@ -3,10 +3,10 @@ Description = Mysql connection to 'asterisk' database
 Driver = MySQL
 Trace = Yes
 TraceFile = /tmp/odbc.log
-Server = 192.168.86.39
+Server = 192.168.1.0
 Port = 3306
 Database = asterisk
 UserName = asterisk
-Password = aaJS1014
+Password = secret
 Option = 3
 Socket = /var/run/mysqld/mysqld.sock
