--- a/etc/console.conf
+++ b/etc/console.conf
@@ -88,7 +88,7 @@ output_device = default      ; use the name that you see when you run the "conso
 autoanswer = no
 context = default
 extension = s
-callerid = The Gwynn's <(602) 492-7950>
+callerid = <phone number>
 language = en
 overridecontext = no
 mohinterpret = default
